# Novus-Writer

./: .gitignore  ARCHITECTURE.md  README.md
assets/logo/: BRAND_GUIDELINES.md
novus-writer/: PHASE8_README.md
novus-writer/backend/src/services/: citation_service.rs  mailmerge_service.rs  template_service.rs
novus-writer/docs/: PHASE3_DATABASE.md  PHASE4_EDITOR.md  PHASE5_EXPORT_IMPORT.md
novus-writer/frontend/: package.json
novus-writer/frontend/src/: App.tsx
novus-writer/frontend/src/components/citations/: CitationManager.tsx
novus-writer/frontend/src/components/collaboration/: CollaborationPanel.tsx
novus-writer/frontend/src/components/editor/: EditorCanvas.tsx  LexicalEditor.tsx
novus-writer/frontend/src/components/layout/: AppShell.tsx
novus-writer/frontend/src/components/mailmerge/: MailMergeManager.tsx
novus-writer/frontend/src/components/ribbon/: ExportTab.tsx  (+7 more)
novus-writer/frontend/src/hooks/: useKeyboardShortcuts.ts  useTextFormatting.ts  useWordCounter.ts
novus-writer/frontend/src/stores/: editorStore.ts  uiStore.ts
novus-writer/frontend/src/styles/: index.css
novus-writer/frontend/src/types/: document.ts  editor.ts  export.ts  search.ts
novus-writer/frontend/src/utils/: tauriBridge.ts
novus-writer/src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
novus-writer/src-tauri/migrations/: 006_phase6_features.sql
novus-writer/src-tauri/src/: lib.rs  main.rs
novus-writer/src-tauri/src/commands/: autosave.rs  backup.rs  bookmark.rs  document.rs  editor.rs  export.rs  mod.rs  search.rs  version.rs
novus-writer/src-tauri/src/core/: mod.rs
novus-writer/src-tauri/src/core/application/: document_app_service.rs  editor_app_service.rs  mod.rs
novus-writer/src-tauri/src/core/domain/: content.rs  document.rs  formatting.rs  mod.rs
novus-writer/src-tauri/src/core/infrastructure/: mod.rs
novus-writer/src-tauri/src/core/infrastructure/repository/: document_repository.rs  mod.rs
novus-writer/src-tauri/src/database/: mod.rs
novus-writer/src-tauri/src/editor/: lexical_types.rs  mod.rs
novus-writer/src-tauri/src/models/: autosave.rs  backup.rs  bookmark.rs  document.rs  error.rs  mod.rs  version.rs
novus-writer/src-tauri/src/plugins/: mod.rs  plugin_trait.rs
novus-writer/src-tauri/src/services/: autosave_service.rs  collaboration_service.rs  document_service.rs  export_service.rs  mod.rs
novus-writer/src-tauri/src/utils/: compression.rs  file_utils.rs  mod.rs
(+12 files in other folders)
